--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.53.0",
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^24.0.1",
     "playwright": "^1.53.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "dotenv": "^17.0.1"
   }
 }
