Implement SelfAssessmentPage class and related test; add manager authentication and enhance ProfilePage and SkillMatrixPage with new locators

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 BOOMERANG_URL=https://app-boomerang-web-test-001.azurewebsites.net/
 EMPLOYEE_USERNAME=testautomation@gmail.com
 EMPLOYEE_PASSWORD=12345
+MANAGER_USERNAME=chiefautomation@gmail.com
+MANAGER_PASSWORD=12345
