Refactor self-assessment tests and utility functions; update environment variables and enhance page object methods for better readability and functionality

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 BOOMERANG_URL=https://app-boomerang-web-test-001.azurewebsites.net/
-EMPLOYEE_USERNAME=testautomation@gmail.com
+EMPLOYEE_USERNAME=hashan.maduraarachchi@ascentic.se
 EMPLOYEE_PASSWORD=12345
 MANAGER_USERNAME=chiefautomation@gmail.com
 MANAGER_PASSWORD=12345
+HR_USERNAME=hrautomation@gmail.com
+HR_PASSWORD=12345
